Uploading 44k repositories data in csv

--- a/repositories.html
+++ b/repositories.html
@@ -395,7 +395,7 @@ a:active {
 <script>
 
 // (It's CSV, but GitHub Pages only gzip's JSON at the moment.)
-d3.csv("repositories_data_44k_short.csv", function(error, repos) {
+d3.csv("repositories_data_44k.csv", function(error, repos) {
 
   // Various formatters.
   var formatNumber = d3.format(",d"),
