--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400:700);
 
 body {
-  font-family: "Helvetica Neue";
+  /*font-family: "Helvetica Neue";*/
+  font-family: "Lato";
   margin: 40px auto;
   width: 960px;
   min-height: 2000px;
@@ -189,9 +190,9 @@ display: inline-block;
 
 aside {
   position: absolute;
-  left: 740px;
+  left: 600px;
   font-size: smaller;
-  width: 220px;
+  width: 230px;
 }
 
 
@@ -395,7 +396,7 @@ a:active {
 <script>
 
 // (It's CSV, but GitHub Pages only gzip's JSON at the moment.)
-d3.csv("repositories_data_44k.csv", function(error, repos) {
+d3.csv("repositories_data_44k.json", function(error, repos) {
 
   // Various formatters.
   var formatNumber = d3.format(",d"),
